[Bug Fix] Results not showing over footer and team not showing on multiple results

--- a/hookd/assets/css/style.css
+++ b/hookd/assets/css/style.css
@@ -39,6 +39,7 @@ main {
     text-align: left;
     width:450px;
     max-width: 450px;
+    padding-bottom: 50px;
 }
 
 #sign-in a {
